# database_1

./: CMakeLists.txt  README.md  conanfile.py  settings.json
include/: app.hpp  connector.hpp  employee.hpp  generator.hpp  loader.hpp  manager.hpp  structs.h  worker.hpp
src/: CMakeLists.txt  app.cpp  connector.cpp  employee.cpp  generator.cpp  loader.cpp  main.cpp  manager.cpp  worker.cpp
